# MSGraphClient

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: COPILOT_CONTEXT.md
docs/: bulk_create_apps.md  getting_started.md  setup_cli.md  setup_delegated_auth.md  setup_portal.md
examples/: example_arcgis_dem_tiles.py  example_delegated_site_contents.py  example_drive_download.py  example_drive_folder_operations.py  example_drive_list.py  example_drive_read_write.py  example_drive_upload.py  example_list_create.py  example_list_get.py  example_list_update.py  example_site_contents.py  list_value_generation.py
notebooks/: arcgis_http_testing.ipynb  graph_auth_site_attributes.ipynb
src/arcgisTest/: __init__.py  auth.py  client.py
src/bulkCreate/: bulk_create_apps.py  sfi_app_backend_apps.json
src/ezsp/: __init__.py  auth.py  client.py  drive.py  lists.py  messages.py  settings.py
src/ezspi/: __init__.py  auth.py  client.py  drive.py  lists.py  messages.py  settings.py
src/ezspi/locales/: en.json  pt.json
src/msgraphclient/: auth.py  client.py  drive.py  lists.py  messages.py  settings.py
src/msgraphclient/locales/: en.json  pt.json
src/msgraphtest/: __init__.py  auth.py  client.py  drive.py  graph_client.py  lists.py  site.py
src/python/: __init__.py  auth.py  client.py  drive.py  lists.py
tests/: test_auth.py  test_drive.py  test_graph_client.py  test_list_value_generation.py  test_lists.py  test_settings.py  test_site.py
