[project]
name = "msgraphclient"
version = "0.1.0"
description = "MSAL abstraction layer for SharePoint access through Microsoft Graph API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/python --cov-report=term-missing"

[tool.coverage.run]
source = ["src/python"]
